fix(media-object): increses content min width before collapsing

--- a/src/css/component.media-object.css
+++ b/src/css/component.media-object.css
@@ -18,7 +18,7 @@
 .media-object__text {
   flex-basis: 0;
   flex-grow: 999;
-  min-width: 50%;
+  min-width: 66.666%;
 }
 
 .media-object--roomy {
